--- a/public/styles/mixins/variables.less
+++ b/public/styles/mixins/variables.less
@@ -12,6 +12,8 @@
 
 @white : white;
 @black : black;
+@grey: #4D4D4D;
+@dark-grey: #303030;
 
 @color-success : limegreen;
 @color-error : orange;
@@ -27,10 +29,15 @@
 @color1-e : #F7F1F0;
 
 @color2-a: #FE615D;
+@color2-b: #F7F7EB;
+@color2-c: #2E3192;
+@color2-d: #E7FF03;
+@color2-e: #E6F4ED;
+@color2-f: #FFDCE4;
 
-// @color-success : limegreen;
-// @color-error : orange;
-// @color-failure : red;
+@color-success : limegreen;
+@color-error : orange;
+@color-failure : red;
 
 /* Fonts */
 
@@ -41,10 +48,3 @@
 @font-size-m : 15px;
 @font-size-l : 18px;
 @font-size-xl : 30px;
-
-// Accessible via JS
-#less {
-    .margin { width: @margin; }
-    .column { width: @column; }
-    .gutter { width: @gutter; }
-}
