--- a/public/styles/site/agenda.less
+++ b/public/styles/site/agenda.less
@@ -6,9 +6,11 @@
 	width: 100%;
 	padding: 0 @margin - @gutter / 2;
 	box-sizing: border-box;
-	padding-top: 50px;
+	padding-top: 40px;
+	margin-top: 100px;
 
 	h1 {
+		font-weight: 900;
 		float: left;
 		position: relative;
 		text-transform: lowercase;
@@ -39,6 +41,7 @@
 	}
 
 	h2 {
+		font-weight: 900;
 		margin-left: @gutter / 2;
 		text-transform: capitalize;
 	}
